# napi-rs-bug

./: Cargo.toml  index.d.ts  index.js
demo/: index.coffee  index.js
src/: bin.rs  lib.rs
