[package]
edition = "2021"
name = "rust"
version = "0.0.1"
homepage = "https://github.com/user-tax-dev/rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.65"
#napi = { version = "2.9.1", default-features = false, features = ["napi8","async","error_anyhow","tokio_net","tokio_rt"] }
napi = { path="../napi-rs/crates/napi", default-features = false, features = ["napi8","async","error_anyhow","tokio_net","tokio_rt"] }
napi-sys = {version="2.2.2",features=["napi8"]}
napi-derive = "2.9.1"
blake3 = "1.3.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
codegen-units = 1
incremental = true
